@@ -1,3 +1,13 @@
+2005-01-18  David Harrison  <harrison@apple.com>
+
+        Reviewed by Darin.
+
+        <rdar://problem/3959668> accessibilityFocusedUIElement sometimes returns an ignored element; it must not
+
+        * kwq/KWQAccObject.mm:
+        (-[KWQAccObject accessibilityFocusedUIElement]):
+        Return parentObjectUnignored if focused object is ignored.
+
 2005-01-18  Ken Kocienda  <kocienda@apple.com>
 
         Reviewed by John
